crates/nuxie-renderer-ffi/src/native.rs


        pub fn rive_ffi_make_render_path(
            context: *mut Context,
            verbs: *const u8,
            verb_count: usize,
            points: *const FfiVec2D,
            point_count: usize,
            fill_rule: u8,
        ) -> *mut RenderPath;
        pub fn rive_ffi_make_empty_render_path(context: *mut Context) -> *mut RenderPath;
        pub fn rive_ffi_render_path_delete(path: *mut RenderPath);
        pub fn rive_ffi_render_path_rewind(path: *mut RenderPath);
        pub fn rive_ffi_render_path_fill_rule(path: *mut RenderPath, fill_rule: u8);
        pub fn rive_ffi_render_path_add_render_path(
            path: *mut RenderPath,
            source: *mut RenderPath,
            transform: FfiMat2D,
        );
        pub fn rive_ffi_render_path_add_render_path_backwards(
            path: *mut RenderPath,
            source: *mut RenderPath,
            transform: FfiMat2D,
        );
        pub fn rive_ffi_render_path_add_raw_path(
            path: *mut RenderPath,
            verbs: *const u8,
            verb_count: usize,
            points: *const FfiVec2D,
            point_count: usize,
        );
        pub fn rive_ffi_render_path_move_to(path: *mut RenderPath, x: f32, y: f32);
        pub fn rive_ffi_render_path_line_to(path: *mut RenderPath, x: f32, y: f32);
        pub fn rive_ffi_render_path_cubic_to(
            path: *mut RenderPath,
            ox: f32,
            oy: f32,
            ix: f32,
            iy: f32,
            x: f32,
            y: f32,
        );
        pub fn rive_ffi_render_path_close(path: *mut RenderPath);

        pub fn rive_ffi_make_render_paint(context: *mut Context) -> *mut RenderPaint;
        pub fn rive_ffi_render_paint_delete(paint: *mut RenderPaint);
        pub fn rive_ffi_render_paint_style(paint: *mut RenderPaint, style: u8);
        pub fn rive_ffi_render_paint_color(paint: *mut RenderPaint, color: u32);
        pub fn rive_ffi_render_paint_thickness(paint: *mut RenderPaint, thickness: f32);
        pub fn rive_ffi_render_paint_join(paint: *mut RenderPaint, join: u32);
        pub fn rive_ffi_render_paint_cap(paint: *mut RenderPaint, cap: u32);
        pub fn rive_ffi_render_paint_feather(paint: *mut RenderPaint, feather: f32);
        pub fn rive_ffi_render_paint_blend_mode(paint: *mut RenderPaint, blend_mode: u8);
        pub fn rive_ffi_render_paint_shader(paint: *mut RenderPaint, shader: *mut RenderShader);
        pub fn rive_ffi_render_paint_invalidate_stroke(paint: *mut RenderPaint);

        pub fn rive_ffi_decode_image(
            context: *mut Context,
            bytes: *const u8,
            len: usize,
        ) -> *mut RenderImage;
        pub fn rive_ffi_render_image_delete(image: *mut RenderImage);
        pub fn rive_ffi_render_image_width(image: *mut RenderImage) -> u32;
        pub fn rive_ffi_render_image_height(image: *mut RenderImage) -> u32;
        #[cfg(feature = "decode-oracle")]
        pub fn rive_ffi_decode_bitmap_rgba(bytes: *const u8, len: usize) -> *mut DecodedBitmap;
        #[cfg(feature = "decode-oracle")]
        pub fn rive_ffi_decoded_bitmap_delete(bitmap: *mut DecodedBitmap);
        #[cfg(feature = "decode-oracle")]
        pub fn rive_ffi_decoded_bitmap_width(bitmap: *mut DecodedBitmap) -> u32;
        #[cfg(feature = "decode-oracle")]
        pub fn rive_ffi_decoded_bitmap_height(bitmap: *mut DecodedBitmap) -> u32;
        #[cfg(feature = "decode-oracle")]
        pub fn rive_ffi_decoded_bitmap_copy_bytes(
            bitmap: *mut DecodedBitmap,
            out: *mut u8,
            len: usize,
        ) -> usize;

        pub fn rive_ffi_make_render_buffer(
            context: *mut Context,
            buffer_type: u8,
            flags: u8,
            size_in_bytes: usize,
        ) -> *mut RenderBuffer;
        pub fn rive_ffi_render_buffer_delete(buffer: *mut RenderBuffer);
        pub fn rive_ffi_render_buffer_write(
            buffer: *mut RenderBuffer,
            bytes: *const u8,
            len: usize,
        );

        pub fn rive_ffi_renderer_save(renderer: *mut Renderer);
        pub fn rive_ffi_renderer_restore(renderer: *mut Renderer);
        pub fn rive_ffi_renderer_transform(renderer: *mut Renderer, transform: FfiMat2D);
        pub fn rive_ffi_renderer_draw_path(
            renderer: *mut Renderer,
            path: *mut RenderPath,
            paint: *mut RenderPaint,
        );
        pub fn rive_ffi_renderer_clip_path(renderer: *mut Renderer, path: *mut RenderPath);
        pub fn rive_ffi_renderer_draw_image(
            renderer: *mut Renderer,
            image: *mut RenderImage,
            sampler: u8,
            blend_mode: u8,
            opacity: f32,
        );
        pub fn rive_ffi_renderer_draw_image_mesh(
            renderer: *mut Renderer,
            image: *mut RenderImage,
            sampler: u8,
            vertices: *mut RenderBuffer,
            uv_coords: *mut RenderBuffer,
            indices: *mut RenderBuffer,
            vertex_count: u32,
            index_count: u32,
            blend_mode: u8,
            opacity: f32,
        );
        pub fn rive_ffi_renderer_modulate_opacity(renderer: *mut Renderer, opacity: f32);
    }
}

#[allow(dead_code)]
fn _path_verb_values_are_cxx_compatible() {
    let _ = PathVerb::Move as u8;
}
